--- a/arch/arm64/configs/dagu_defconfig
+++ b/arch/arm64/configs/dagu_defconfig
@@ -63,7 +63,7 @@ CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
 # CONFIG_ARM64_VHE is not set
 CONFIG_RANDOMIZE_BASE=y
-CONFIG_CMDLINE="ramoops_memreserve=4M"
+CONFIG_CMDLINE="cgroup_disable=pressure ramoops_memreserve=4M"
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_EFI is not set
 CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL=y
@@ -300,6 +300,8 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 CONFIG_HDCP_QSEECOM=y
 CONFIG_QSEECOM=y
 CONFIG_UID_SYS_STATS=y
+CONFIG_HALL_AKM09970=y
+CONFIG_MOTOR_DRV8846=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_SG=y
@@ -346,6 +348,7 @@ CONFIG_CNSS_QCA6390=y
 CONFIG_CNSS_GENL=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_GPIO=y
+CONFIG_KEYBOARD_NANO_8030=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
@@ -358,6 +361,8 @@ CONFIG_TABLET_USB_GTCO=y
 CONFIG_TABLET_USB_HANWANG=y
 CONFIG_TABLET_USB_KBTAB=y
 CONFIG_INPUT_TOUCHSCREEN=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_TCM is not set
 CONFIG_TOUCHSCREEN_HIMAX_CHIPSET=y
 CONFIG_TOUCHSCREEN_HIMAX_COMMON=y
 CONFIG_TOUCHSCREEN_HIMAX_IC_HX83121=y
@@ -369,6 +374,7 @@ CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_AW8697_HAPTIC=y
 CONFIG_INPUT_AW8697_HAPTIC_DAGU=y
+CONFIG_INPUT_XIAOMI_KEYBOARD=y
 CONFIG_INPUT_FINGERPRINT=y
 # CONFIG_SERIO_SERPORT is not set
 # CONFIG_VT is not set
@@ -424,11 +430,14 @@ CONFIG_MFD_SPMI_PMIC=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_PROXY_CONSUMER=y
+CONFIG_REGULATOR_QCOM_RPMH=y
 CONFIG_REGULATOR_QPNP_AMOLED=y
 CONFIG_REGULATOR_QPNP_LCDB=y
 CONFIG_REGULATOR_REFGEN=y
 CONFIG_REGULATOR_RPMH=y
 CONFIG_REGULATOR_STUB=y
+CONFIG_REGULATOR_PM8008=y
+CONFIG_I2C_RETRY=y
 CONFIG_RC_CORE=y
 CONFIG_LIRC=y
 CONFIG_RC_DECODERS=y
@@ -455,6 +464,8 @@ CONFIG_DRM_LONTIUM_LT9611UXC=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_QCOM_SPMI_WLED=y
+CONFIG_BACKLIGHT_KTZ8866=y
+CONFIG_BACKLIGHT_DUALKTZ8866=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_DYNAMIC_MINORS=y
@@ -523,6 +534,7 @@ CONFIG_USB_CONFIGFS_F_PTP=y
 CONFIG_TYPEC=y
 CONFIG_USB_PD_POLICY=y
 CONFIG_QPNP_USB_PDPHY=y
+CONFIG_PS5169=y
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
@@ -536,6 +548,7 @@ CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_QTI_TRI_LED=y
 CONFIG_LEDS_QPNP_FLASH_V2=y
+CONFIG_LEDS_AW2015=y
 CONFIG_LEDS_TRIGGER_TIMER=y
 CONFIG_EDAC=y
 CONFIG_EDAC_KRYO_ARM64=y
@@ -548,6 +561,7 @@ CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 CONFIG_ION=y
 CONFIG_ION_SYSTEM_HEAP=y
+CONFIG_ION_CAMERA_HEAP=y
 CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCA_CLD_WLAN_PROFILE="qca6390"
 CONFIG_QPNP_REVID=y
@@ -669,6 +683,7 @@ CONFIG_ANDROID_BINDERFS=y
 # CONFIG_NVMEM_SYSFS is not set
 CONFIG_QCOM_QFPROM=y
 CONFIG_NVMEM_SPMI_SDAM=y
+CONFIG_AIROHA_GPS=y
 CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_ESOC=y
 CONFIG_ESOC_DEV=y
