--- a/arch/arm64/configs/thyme_defconfig
+++ b/arch/arm64/configs/thyme_defconfig
@@ -48,6 +48,7 @@ CONFIG_PROFILING=y
 # CONFIG_ZONE_DMA32 is not set
 CONFIG_ARCH_QCOM=y
 CONFIG_ARCH_KONA=y
+CONFIG_BOARD_XIAOMI=y
 CONFIG_PCI=y
 CONFIG_PCI_MSM=y
 CONFIG_PCI_MSM_MSI=y
