--- a/drivers/xiaomi/Kconfig
+++ b/drivers/xiaomi/Kconfig
@@ -11,32 +11,30 @@ config XIAOMI_MIUI
 
 if XIAOMI_MIUI
 
-config MIUI_DRM_OPT
-	bool "Enable MIUI DRM optimizations"
+config PACKAGE_RUNTIME_INFO
+	bool "Show package runtime info on cluster"
 	help
-	  Enables compilation of Xiaomi MIUI specific DRM optimizations
+	  This option can show package runtime info in sup/big/little core.
 
 config MIGT
 	bool "Boost cpufreq during high load"
+	depends on PACKAGE_RUNTIME_INFO
 	help
 	  Boost cpufreq when current frame drawing time too long
 
 config MILLET
 	bool "MIUI frozen framework"
+	depends on PACKAGE_RUNTIME_INFO
 	help
 	  MIUI frozen function
 
 config MIGT_ENERGY_MODEL
 	bool "DT-based Energy Model for CPU and GPU"
+	depends on MIGT
 	help
 	  This mod rely on Energy Models (EMs) statically defined in
 	  the Device Tree. Since EAS now uses only the active costs of CPUs,
 	  the cluster-related costs and idle-costs are ignored.
-
-config PACKAGE_RUNTIME_INFO
-	bool "Show package runtime info on cluster"
-	help
-	  This option can show package runtime info in sup/big/little core.
 
 config PERF_HUMANTASK
 	bool "Enable MIUI humantask performance feature"
@@ -53,6 +51,18 @@ config SF_BINDER
 	bool "Enable surfaceflinger binder thread" if EXPERT
 	help
 	  Xiaomi restore surfaceflinger binder priority FIFO
+
+config MIUI_ZRAM_MEMORY_TRACKING
+	bool "Track zRam stats"
+	depends on ZRAM
+	help
+	  With this feature, admin can track the state of zram
+	  of zRAM. Admin could see the information via
+	  /sys/block/zramX/.
+
+	  See Documentation/blockdev/zram.txt for more information.
+
+source "drivers/xiaomi/fragmention/Kconfig"
 
 endif
 
