--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -153,6 +153,8 @@ else ifeq ($(CONFIG_MACH_XIAOMI_THYME),y)
 $(obj)/config_data.gz: arch/arm64/configs/thyme_stock-defconfig FORCE
 else ifeq ($(CONFIG_MACH_XIAOMI_UMI),y)
 $(obj)/config_data.gz: arch/arm64/configs/umi_stock-defconfig FORCE
+else ifeq ($(CONFIG_MACH_XIAOMI_PIPA),y)
+$(obj)/config_data.gz: arch/arm64/configs/pipa_stock-defconfig FORCE
 else
 $(obj)/config_data.gz: $(KCONFIG_CONFIG) FORCE
 endif
@@ -174,6 +176,8 @@ else ifeq ($(CONFIG_MACH_XIAOMI_PSYCHE),y)
 $(obj)/config_data.gz: arch/arm64/configs/AOSP_defconfig/psyche_stock-defconfig FORCE
 else ifeq ($(CONFIG_MACH_XIAOMI_UMI),y)
 $(obj)/config_data.gz: arch/arm64/configs/AOSP_defconfig/umi_stock-defconfig FORCE
+else ifeq ($(CONFIG_MACH_XIAOMI_PIPA),y)
+$(obj)/config_data.gz: arch/arm64/configs/AOSP_defconfig/pipa_stock-defconfig FORCE
 else
 $(obj)/config_data.gz: $(KCONFIG_CONFIG) FORCE
 endif
