Update pipa defconfig

--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -371,6 +371,7 @@ CONFIG_TOUCHSCREEN_HIMAX_IC_HX83121=y
 CONFIG_TOUCHSCREEN_HIMAX_DEBUG=y
 CONFIG_TOUCHSCREEN_HIMAX_INSPECT=y
 CONFIG_TOUCHSCREEN_NVT_DEBUG_FS=y
+CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
 CONFIG_TOUCHSCREEN_SUPPORT_NEW_GAME_MODE=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_QPNP_POWER_ON=y
@@ -408,6 +409,7 @@ CONFIG_QPNP_SMB5=y
 CONFIG_QPNP_QNOVO5=y
 CONFIG_QPNP_FG_GEN4=y
 CONFIG_HL6111R=y
+CONFIG_FUDA_1665=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
@@ -582,6 +584,7 @@ CONFIG_MSM_11AD=m
 CONFIG_USB_BAM=y
 CONFIG_QCOM_GENI_SE=y
 CONFIG_IPA3_REGDUMP=y
+CONFIG_MACH_XIAOMI_PIPA=y
 CONFIG_QCOM_CLK_RPMH=y
 CONFIG_SPMI_PMIC_CLKDIV=y
 CONFIG_MSM_CLK_AOP_QMP=y
