--- a/drivers/power/supply/ti/Kconfig
+++ b/drivers/power/supply/ti/Kconfig
@@ -46,6 +46,16 @@ config BQ2597X_CHARGE_PUMP_DAGU
 	  BQ2597X is a div2 charge pump capable of delivering 8A charge current
 	  with very high efficiency.
 
+config BQ2597X_CHARGE_PUMP_PIPA
+	tristate "BQ2597X power supply framework based driver"
+	depends on I2C
+	help
+	  Say Y to include support for BQ2597X Charge Pump driver based on
+	  power supply framework.
+	  BQ2597X is a div2 charge pump capable of delivering 8A charge current
+	  with very high efficiency.
+
+
 config BQ2597X_CHARGE_PUMP_STANDALONE_MUNCH
 	tristate "BQ2597X power supply framework based driver"
 	depends on I2C
