--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -351,6 +351,7 @@ CONFIG_CNSS_GENL=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_KEYBOARD_NANO_8030=y
+CONFIG_KEYBOARD_NANO_8030_V2=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
@@ -363,6 +364,7 @@ CONFIG_TABLET_USB_GTCO=y
 CONFIG_TABLET_USB_HANWANG=y
 CONFIG_TABLET_USB_KBTAB=y
 CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_NT36532_HOSTDL_SPI=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_TCM is not set
 CONFIG_TOUCHSCREEN_HIMAX_CHIPSET=y
@@ -376,6 +378,7 @@ CONFIG_TOUCHSCREEN_SUPPORT_NEW_GAME_MODE=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_UINPUT=y
+CONFIG_INPUT_AW8697_HAPTIC=y
 CONFIG_INPUT_XIAOMI_KEYBOARD=y
 # CONFIG_SERIO_SERPORT is not set
 # CONFIG_LEGACY_PTYS is not set
@@ -410,6 +413,7 @@ CONFIG_QPNP_QNOVO5=y
 CONFIG_QPNP_FG_GEN4=y
 CONFIG_HL6111R=y
 CONFIG_FUDA_1665=y
+CONFIG_BQ2597X_CHARGE_PUMP_PIPA=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
@@ -682,6 +686,7 @@ CONFIG_EXTCON_USB_GPIO=y
 CONFIG_IIO=y
 CONFIG_QCOM_SPMI_ADC5=y
 CONFIG_CH101_I2C=y
+CONFIG_US_PROXIMITY=y
 CONFIG_ADS7052_TDK_THERMISTOR=y
 CONFIG_PWM=y
 CONFIG_PWM_QTI_LPG=y
@@ -774,3 +779,4 @@ CONFIG_CORESIGHT_HWEVENT=y
 CONFIG_CORESIGHT_DUMMY=y
 CONFIG_CORESIGHT_REMOTE_ETM=y
 CONFIG_CORESIGHT_TGU=y
+CONFIG_TECHPACK_CAMERA_XIAOMI_TABLET=y
