--- a/drivers/tty/serial/Kconfig
+++ b/drivers/tty/serial/Kconfig
@@ -1014,6 +1014,15 @@ config SERIAL_MSM_GENI_EARLY_CONSOLE
 	  Serial early console driver for Qualcomm Technologies Inc's GENI
 	  based QUP hardware.
 
+config SERIAL_MSM_GENI_ELISH
+	tristate "MSM on-chip elish GENI HW based serial port support"
+	depends on ARCH_QCOM
+	select SERIAL_CORE
+	help
+	    Serial driver for Qualcomm Technologies Inc's GENI based QUPv3
+	    hardware.
+	    The driver supports console and High speed UART functions.
+
 config SERIAL_MSM_GENI_CONSOLE
 	tristate "MSM on-chip GENI HW based console support"
 	depends on SERIAL_MSM_GENI=y
