--- a/arch/arm64/configs/munch_defconfig
+++ b/arch/arm64/configs/munch_defconfig
@@ -539,7 +539,7 @@ CONFIG_USB_CONFIGFS_F_GSI=y
 CONFIG_USB_CONFIGFS_F_MTP=y
 CONFIG_USB_CONFIGFS_F_PTP=y
 CONFIG_TYPEC=y
-CONFIG_USB_PD_POLICY=y
+CONFIG_USB_PD_POLICY_MUNCH=y
 CONFIG_QPNP_USB_PDPHY=y
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
