--- a/arch/arm64/configs/dagu_defconfig
+++ b/arch/arm64/configs/dagu_defconfig
@@ -368,6 +368,8 @@ CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_HIMAX_CHIPSET=y
 CONFIG_TOUCHSCREEN_HIMAX_COMMON=y
 CONFIG_TOUCHSCREEN_HIMAX_IC_HX83121=y
+CONFIG_TOUCHSCREEN_HIMAX_DEBUG=y
+CONFIG_TOUCHSCREEN_HIMAX_INSPECT=y
 CONFIG_TOUCHSCREEN_NT36523_HOSTDL_SPI=y
 CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
 CONFIG_TOUCHSCREEN_SUPPORT_NEW_GAME_MODE=y
@@ -380,8 +382,8 @@ CONFIG_INPUT_XIAOMI_KEYBOARD=y
 # CONFIG_SERIO_SERPORT is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVMEM is not set
-CONFIG_SERIAL_MSM_GENI=y
 CONFIG_SERIAL_MSM_GENI_HALF_SAMPLING=y
+CONFIG_SERIAL_MSM_GENI_ELISH=y
 CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_MSM_LEGACY=y
 # CONFIG_DEVPORT is not set
@@ -407,7 +409,6 @@ CONFIG_POWER_RESET_XGENE=y
 CONFIG_POWER_RESET_SYSCON=y
 CONFIG_QPNP_SMB5_DAGU=y
 CONFIG_QPNP_QNOVO5=y
-CONFIG_QPNP_FG_GEN4=y
 CONFIG_HL6111R=y
 CONFIG_DUAL_FUEL_GAUGE_BQ27Z561_DAGU=y
 CONFIG_IDT_P9418=y
@@ -472,6 +473,7 @@ CONFIG_DRM_LONTIUM_LT9611UXC=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_QCOM_SPMI_WLED=y
+CONFIG_BACKLIGHT_DUALKTZ8866=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_DYNAMIC_MINORS=y
@@ -542,8 +544,9 @@ CONFIG_USB_CONFIGFS_F_GSI=y
 CONFIG_USB_CONFIGFS_F_MTP=y
 CONFIG_USB_CONFIGFS_F_PTP=y
 CONFIG_TYPEC=y
-CONFIG_USB_PD_POLICY=y
+CONFIG_USB_PD_POLICY_DAGU=y
 CONFIG_QPNP_USB_PDPHY=y
+CONFIG_PS5169=y
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
@@ -700,11 +703,6 @@ CONFIG_QCOM_QFPROM=y
 CONFIG_NVMEM_SPMI_SDAM=y
 CONFIG_AIROHA_GPS=y
 CONFIG_SLIMBUS_MSM_NGD=y
-CONFIG_ESOC=y
-CONFIG_ESOC_DEV=y
-CONFIG_ESOC_CLIENT=y
-CONFIG_ESOC_MDM_4x=y
-CONFIG_ESOC_MDM_DRV=y
 CONFIG_SENSORS_SSC=y
 CONFIG_QCOM_KGSL=y
 CONFIG_EXT4_FS=y
