--- a/arch/arm64/configs/elish_defconfig
+++ b/arch/arm64/configs/elish_defconfig
@@ -238,6 +238,7 @@ CONFIG_L2TP_V3=y
 CONFIG_L2TP_IP=y
 CONFIG_L2TP_ETH=y
 CONFIG_BRIDGE=y
+# CONFIG_BRIDGE_IGMP_SNOOPING is not set
 CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_HTB=y
 CONFIG_NET_SCH_PRIO=y
@@ -379,8 +380,8 @@ CONFIG_FINGERPRINT_GOODIX=y
 # CONFIG_SERIO_SERPORT is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVMEM is not set
-CONFIG_SERIAL_MSM_GENI=y
 CONFIG_SERIAL_MSM_GENI_HALF_SAMPLING=y
+CONFIG_SERIAL_MSM_GENI_ELISH=y
 CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_MSM_LEGACY=y
 # CONFIG_DEVPORT is not set
@@ -700,11 +701,6 @@ CONFIG_QCOM_QFPROM=y
 CONFIG_NVMEM_SPMI_SDAM=y
 CONFIG_AIROHA_GPS=y
 CONFIG_SLIMBUS_MSM_NGD=y
-CONFIG_ESOC=y
-CONFIG_ESOC_DEV=y
-CONFIG_ESOC_CLIENT=y
-CONFIG_ESOC_MDM_4x=y
-CONFIG_ESOC_MDM_DRV=y
 CONFIG_SENSORS_SSC=y
 CONFIG_QCOM_KGSL=y
 CONFIG_EXT4_FS=y
