--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -407,12 +407,11 @@ CONFIG_GPIO_SYSFS=y
 CONFIG_POWER_RESET_QCOM=y
 CONFIG_POWER_RESET_XGENE=y
 CONFIG_POWER_RESET_SYSCON=y
-CONFIG_QPNP_SMB5=y
 CONFIG_QPNP_QNOVO5=y
-CONFIG_QPNP_FG_GEN4=y
 CONFIG_HL6111R=y
 CONFIG_FUDA_1665=y
 CONFIG_BQ2597X_CHARGE_PUMP_PIPA=y
+CONFIG_DUAL_BQ2597X=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
@@ -489,6 +488,7 @@ CONFIG_HID_NINTENDO=y
 CONFIG_HID_PLANTRONICS=y
 CONFIG_HID_SONY=y
 CONFIG_SONY_FF=y
+CONFIG_HID_WACOM=y
 CONFIG_HID_QVR=y
 CONFIG_USB_HIDDEV=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
@@ -553,8 +553,6 @@ CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_MSM=y
 CONFIG_MMC_CQHCI_CRYPTO=y
 CONFIG_MMC_CQHCI_CRYPTO_QTI=y
-CONFIG_NEW_LEDS=y
-CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_QTI_TRI_LED=y
 CONFIG_LEDS_QPNP_FLASH_V2=y
 CONFIG_LEDS_TRIGGER_TIMER=y
