--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -407,6 +407,7 @@ CONFIG_GPIO_SYSFS=y
 CONFIG_POWER_RESET_QCOM=y
 CONFIG_POWER_RESET_XGENE=y
 CONFIG_POWER_RESET_SYSCON=y
+CONFIG_QPNP_SMB5_PIPA=y
 CONFIG_QPNP_QNOVO5=y
 CONFIG_HL6111R=y
 CONFIG_FUDA_1665=y
