--- a/drivers/power/supply/qcom/Kconfig
+++ b/drivers/power/supply/qcom/Kconfig
@@ -69,6 +69,20 @@ config QPNP_SMB5_MUNCH
 	  and powered Type-C cables respectively.
 	  This is to distinguish diff project.
 
+config QPNP_SMB5_PIPA
+	tristate "SMB5 Battery Charger"
+	depends on MFD_SPMI_PMIC
+	help
+	  Say Y to enables support for the SMB5 charging peripheral.
+	  The QPNP SMB5 charger driver supports the charger peripheral
+	  present in the chip.
+	  The power supply framework is used to communicate battery and
+	  usb properties to userspace and other driver consumers such
+	  as fuel gauge, USB, and USB-PD.
+	  VBUS and VCONN regulators are registered for supporting OTG,
+	  and powered Type-C cables respectively.
+	  This is to distinguish diff project.
+
 config QPNP_SMBLITE
 	tristate "SMBLITE Battery Charger"
 	depends on MFD_SPMI_PMIC
