--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -411,6 +411,8 @@ CONFIG_QPNP_SMB5_PIPA=y
 CONFIG_QPNP_QNOVO5=y
 CONFIG_HL6111R=y
 CONFIG_FUDA_1665=y
+CONFIG_BATT_VERIFY_BY_DS28E16_PIPA=y
+CONFIG_ONEWIRE_GPIO_PIPA=y
 CONFIG_BQ2597X_CHARGE_PUMP_PIPA=y
 CONFIG_DUAL_BQ2597X=y
 CONFIG_THERMAL=y
