Fix audio Kconfig check for UMI and CMI

--- a/techpack/audio/asoc/codecs/wsa883x/Kbuild
+++ b/techpack/audio/asoc/codecs/wsa883x/Kbuild
@@ -70,11 +70,11 @@ INCS +=		$(COMMON_INC) \
 EXTRA_CFLAGS += $(INCS)
 
 
-ifdef CONFIG_BOARD_UMI
+ifdef CONFIG_MACH_XIAOMI_UMI
 	CDEFINES += -DCONFIG_TARGET_PRODUCT_UMI
 endif
 
-ifdef CONFIG_BOARD_CMI
+ifdef CONFIG_MACH_XIAOMI_CMI
 	CDEFINES += -DCONFIG_TARGET_PRODUCT_CMI
 endif
 
