Add TOUCHSCREEN_SUPPORT_NEW_GAME_MODE for touch nt36532 for pipa

--- a/drivers/input/touchscreen/nt36532/Kconfig
+++ b/drivers/input/touchscreen/nt36532/Kconfig
@@ -9,3 +9,11 @@ config TOUCHSCREEN_NT36532_HOSTDL_SPI
 	  to your system by SPI bus.
 
 	  If unsure, say N.
+
+config TOUCHSCREEN_SUPPORT_NEW_GAME_MODE
+    bool "Touch Support New Game Mode"
+    default n
+    help
+      Say Y here if the device support new game mode
+
+      If not support, say N.
