Enable framebuffer driver for all models

--- a/arch/arm64/configs/elish_defconfig
+++ b/arch/arm64/configs/elish_defconfig
@@ -364,11 +364,11 @@ CONFIG_TABLET_USB_GTCO=y
 CONFIG_TABLET_USB_HANWANG=y
 CONFIG_TABLET_USB_KBTAB=y
 CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_SUPPORT_NEW_GAME_MODE=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_TCM is not set
 CONFIG_TOUCHSCREEN_NT36523_HOSTDL_SPI=y
 CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
-CONFIG_TOUCHSCREEN_SUPPORT_NEW_GAME_MODE=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_UINPUT=y
@@ -470,6 +470,7 @@ CONFIG_VIDEO_V4L2_VIDEOBUF2_CORE=y
 CONFIG_I2C_RTC6226_QCA=y
 CONFIG_DRM=y
 CONFIG_DRM_LONTIUM_LT9611UXC=y
+CONFIG_FB=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_QCOM_SPMI_WLED=y
