--- a/arch/arm64/configs/cas_defconfig
+++ b/arch/arm64/configs/cas_defconfig
@@ -365,6 +365,7 @@ CONFIG_TABLET_USB_KBTAB=y
 CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_TCM is not set
+CONFIG_SECURE_TOUCH=y
 CONFIG_TOUCHSCREEN_ST_FTS_V521=y
 CONFIG_TOUCHSCREEN_FOD=y
 CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
