--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -411,6 +411,7 @@ CONFIG_POWER_RESET_XGENE=y
 CONFIG_POWER_RESET_SYSCON=y
 CONFIG_QPNP_SMB5_PIPA=y
 CONFIG_QPNP_QNOVO5=y
+CONFIG_QPNP_FG_GEN4_PIPA=y
 CONFIG_HL6111R=y
 CONFIG_FUDA_1665=y
 CONFIG_BATT_VERIFY_BY_DS28E16_PIPA=y
