--- a/arch/arm64/configs/pipa_defconfig
+++ b/arch/arm64/configs/pipa_defconfig
@@ -300,6 +300,7 @@ CONFIG_WIGIG_SENSING_SPI=m
 CONFIG_QTI_XR_SMRTVWR_MISC=y
 CONFIG_QTI_MAXIM_FAN_CONTROLLER=y
 CONFIG_KINECTICS_XR_NORDIC=y
+CONFIG_MMHARDWARE_OTHER_DETECTION=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_SG=y
