Add and enable BOOTUP_RECLAIM for MIUI builds.

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -660,6 +660,11 @@ config PERF_HELPER
 	help
 	  this module support record perf lock history and other perf messages.
 
+config BOOTUP_RECLAIM
+        bool "bootup reclaim"
+        default n
+        help
+          reclaim global memory when bootup
 
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
