--- a/arch/arm64/configs/elish_defconfig
+++ b/arch/arm64/configs/elish_defconfig
@@ -266,7 +266,16 @@ CONFIG_QRTR_MHI=y
 CONFIG_BPF_JIT=y
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_CAN=y
+CONFIG_CAN_VCAN=y
+CONFIG_CAN_VXCAN=y
 CONFIG_CAN_MCP25XXFD=y
+CONFIG_CAN_8DEV_USB=y
+CONFIG_CAN_EMS_USB=y
+CONFIG_CAN_ESD_USB2=y
+CONFIG_CAN_GS_USB=y
+CONFIG_CAN_KVASER_USB=y
+CONFIG_CAN_MCBA_USB=y
+CONFIG_CAN_UCAN=y
 CONFIG_BT=y
 CONFIG_MSM_BT_POWER=y
 CONFIG_BT_SLIM_QCA6390=y
