--- a/arch/arm64/configs/cmi_defconfig
+++ b/arch/arm64/configs/cmi_defconfig
@@ -267,6 +267,7 @@ CONFIG_SOCKEV_NLMCAST=y
 CONFIG_CAN=y
 CONFIG_CAN_VCAN=y
 CONFIG_CAN_VXCAN=y
+CONFIG_CAN_SLCAN=y
 CONFIG_CAN_MCP25XXFD=y
 CONFIG_CAN_8DEV_USB=y
 CONFIG_CAN_EMS_USB=y
