--- a/arch/arm64/configs/dagu_defconfig
+++ b/arch/arm64/configs/dagu_defconfig
@@ -382,6 +382,7 @@ CONFIG_TOUCHSCREEN_HIMAX_DEBUG=y
 CONFIG_TOUCHSCREEN_HIMAX_INSPECT=y
 CONFIG_TOUCHSCREEN_NT36523_HOSTDL_SPI=y
 CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
+CONFIG_TOUCHSCREEN_NEW_PEN_CONNECT_STRATEGY=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_UINPUT=y
