Update defconfig for ENUMA

--- a/arch/arm64/configs/enuma_defconfig
+++ b/arch/arm64/configs/enuma_defconfig
@@ -369,9 +369,10 @@ CONFIG_TABLET_USB_HANWANG=y
 CONFIG_TABLET_USB_KBTAB=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_SUPPORT_NEW_GAME_MODE=y
+CONFIG_TOUCHSCREEN_ST=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_TCM is not set
 CONFIG_TOUCHSCREEN_NT36523_HOSTDL_SPI=y
+CONFIG_TOUCHSCREEN_NVT_DEBUG_FS=y
 CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_QPNP_POWER_ON=y
@@ -474,8 +475,7 @@ CONFIG_I2C_RTC6226_QCA=y
 CONFIG_DRM=y
 CONFIG_DRM_LONTIUM_LT9611UXC=y
 CONFIG_FB=y
-CONFIG_BACKLIGHT_LCD_SUPPORT=y
-CONFIG_BACKLIGHT_CLASS_DEVICE=y
+CONFIG_FB_ARMCLCD=y
 CONFIG_BACKLIGHT_QCOM_SPMI_WLED=y
 CONFIG_BACKLIGHT_KTZ8866=y
 CONFIG_SOUND=y
